# wishlist

./: .gitignore  .gitmodules  Cargo.toml  README.md  index-52ce7463f1bb981a.css  index-8cca5705cbc18b71.css  index.html  index.scss  rustfmt.toml  wishlist-15c6463601e1c535.js  wishlist-15c6463601e1c535_bg.wasm  wishlist-194493ea06008d3f.js  wishlist-194493ea06008d3f_bg.wasm  wishlist-2079c78d7b31ac71.js  wishlist-2079c78d7b31ac71_bg.wasm  wishlist-23dd9032f96c81c4.js  wishlist-23dd9032f96c81c4_bg.wasm  wishlist-309d9fc5235b448a.js  wishlist-309d9fc5235b448a_bg.wasm  wishlist-36db4978b2788b73.js  wishlist-36db4978b2788b73_bg.wasm  wishlist-4132d667622d7398.js  wishlist-4132d667622d7398_bg.wasm  wishlist-4234ff6df6b538cc.js  wishlist-4234ff6df6b538cc_bg.wasm  wishlist-4314793482c8a143.js  wishlist-4314793482c8a143_bg.wasm  wishlist-4e2c57e3e70deb44.js  wishlist-4e2c57e3e70deb44_bg.wasm  wishlist-4fa813f7e38ad76e.js  wishlist-4fa813f7e38ad76e_bg.wasm  wishlist-52c373df59258f7c.js  wishlist-52c373df59258f7c_bg.wasm  wishlist-56dc2516439c710a.js  wishlist-56dc2516439c710a_bg.wasm  wishlist-5910d41a72dfda44.js  wishlist-5910d41a72dfda44_bg.wasm  wishlist-60f868fe54e6f3bb.js  wishlist-60f868fe54e6f3bb_bg.wasm  wishlist-62e9afd657094e87.js  (+43 more)
.github/workflows/: deployment.yml  integration.yml
.kanbn/: board.css  index.md
.kanbn/tasks/: add-ability-to-merge-items-into-bundles.md  flex-ify-logged-in-homepage-so-that-create-button-and-list-entries-have-proper-layout-and-margins.md  implement-touch-based-drag-drop.md  make-home-page-wishlists-look-better.md  make-homepage-view-when-not-logged-in.md  normalize-vertical-position-of-title-on-item-cards.md  only-see-wishlists-owned-by-the-logged-in-user.md  refine-add-item-flow-for-a-wishlist.md  reorder-items-in-list-using-drag-drop.md  spec-out-invite-invitee-gifter-functionality.md  spec-out-reservation-system.md  spec-out-shopping-list.md  user-can-rename-wishlists.md
src/: api.rs  auth.rs  components.rs  config.rs  data.rs  database.rs  hooks.rs  index.rs  main.rs  page.rs  response.rs  route.rs  session.rs  storage.rs  theme.rs  util.rs
src/api/: auth.rs  github.rs
src/api/github/: gist.rs
src/components/: auth_switch.rs  tag.scss  user.rs  wishlist.rs
src/components/wishlist/: info_modal.rs  item.rs  item_modal.rs  page.rs
src/data/: list.rs  user.rs
src/data/list/: bundle.rs  entry.rs  idea.rs  kind.rs  specific.rs
src/database/: list.rs  query.rs  schema.rs  user.rs
src/page/: home.rs  index.rs  list.rs
src/page/list/: collection.rs  list.rs
src/storage/: autosync.rs
src/storage/autosync/: generate_repo.rs  query_viewer.rs
src/util/: touch_drag_drop.rs  web_ext.rs
