[package]
name = "wishlist"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
log = "0.4"
yew = { version = "0.19" }
ybc = { version = "0.3.0-beta.0" } # depeonds on yew:0.19
yew-router = { version = "0.16" } # limited by yew:0.19
yew-oauth2 = "0.4"
gloo-storage = "0.2"
