[package]
name = "wishlist"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
log = "0.4"
yew = { version = "0.20", features = ["csr"] }
# ybc = { version = "0.3.0-beta.0" } # depends on yew:0.19
# waiting for https://github.com/thedodd/ybc/pull/32 to use crates.io @ v0.4
ybc = { git = "https://github.com/SionoiS/ybc", branch = "alpha-v0.4" }
yew-router = { version = "0.17" } # limited by yew:0.19
gloo-storage = "0.2"
gloo-utils = "0.1"
web-sys = { version = "0.3", features = ["Request", "Storage", "Window"] }
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
urlencoding = "2.1"
kdl = "4.6"
async-channel = "1.8"
